--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "font-awesome": "^4.7.0",
     "jquery": "^3.3.1",
     "lottie-web": "^5.4.2",
+    "select2": "^4.0.6-rc.1",
     "swiper": "^4.4.6"
   },
   "devDependencies": {
