--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "private": true,
   "version": "1.0.0",
   "scripts": {
-    "build": "gulp"
+    "dev": "gulp",
+    "build": "gulp build"
   },
   "dependencies": {
     "aos": "^2.3.4",
